--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -112,7 +112,7 @@
                 max-width: 90%;
             }
         </style>
-        <script type="text/javascript" src="https://unpkg.com/centrifuge@^5/dist/centrifuge.js"></script>
+        <script type="text/javascript" src="http://localhost:2000/centrifuge.js"></script>
         <script type="text/javascript">
             class Message {
                 constructor(time, text, meta) {
@@ -224,7 +224,7 @@
                 // subscribe on channel and bind various event listeners. Actual
                 // subscription request will be sent after client connects to
                 // a server.
-                const sub = centrifuge.newSubscription(channel);
+                const sub = centrifuge.newSubscription(channel, {delta: 'jsonpatch'});
 
                 sub.on("publication", handlePublication)
                     .on("join", handleJoin)
