--- a/_examples/document_sync/index.html
+++ b/_examples/document_sync/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="counter"></div>
-    <script type="text/javascript" src="https://unpkg.com/centrifuge@5.2.0-beta.1/dist/centrifuge.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/centrifuge@5.2.0/dist/centrifuge.js"></script>
     <script type="text/javascript" src="rtdocument.js"></script>
     <script type="text/javascript">
         window.addEventListener('load', function() {
