--- a/_examples/emulation_protobuf/index.html
+++ b/_examples/emulation_protobuf/index.html
@@ -10,6 +10,7 @@
         <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"></script>
         <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"></script>
         <script type="text/javascript" src="https://unpkg.com/centrifuge@^5/dist/centrifuge.protobuf.js"></script>
+
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -35,7 +36,9 @@
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connected', function(ctx){
-                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
+                    let dataStr = new TextDecoder("utf-8").decode(ctx.data);
+                    const data = JSON.parse(dataStr);
+                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(data));
                     input.removeAttribute('disabled');
                 });
 
