--- a/_examples/tags_filter/index.html
+++ b/_examples/tags_filter/index.html
@@ -2,14 +2,204 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Tags Filter Example</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
-            .controls { margin: 10px 0; }
-            .controls label { margin-right: 10px; }
-            #tickerSelect { margin: 0 10px; }
-            #status { margin: 10px 0; font-weight: bold; }
+            body {
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                height: 100vh;
+                margin: 0;
+                padding: 20px;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .container {
+                max-width: 900px;
+                height: calc(100vh - 40px);
+                display: flex;
+                flex-direction: column;
+            }
+            .card {
+                border: none;
+                border-radius: 15px;
+                box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+            .card-body {
+                flex: 1;
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
+            }
+            .card-header {
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white;
+                border-radius: 15px 15px 0 0 !important;
+                padding: 20px;
+            }
+            .card-header h1 {
+                margin: 0;
+                font-size: 24px;
+                font-weight: 600;
+            }
+            .protocol-badge {
+                display: inline-block;
+                padding: 4px 12px;
+                border-radius: 12px;
+                font-size: 12px;
+                font-weight: 600;
+                margin-left: 10px;
+            }
+            .protocol-protobuf {
+                background: #10b981;
+                color: white;
+            }
+            .protocol-json {
+                background: #3b82f6;
+                color: white;
+            }
+            #status {
+                padding: 12px;
+                border-radius: 8px;
+                font-weight: 500;
+                margin-bottom: 20px;
+            }
+            .status-connected {
+                background: #d1fae5;
+                color: #065f46;
+                border-left: 4px solid #10b981;
+            }
+            .status-disconnected {
+                background: #fee2e2;
+                color: #991b1b;
+                border-left: 4px solid #ef4444;
+            }
+            .status-connecting {
+                background: #fef3c7;
+                color: #92400e;
+                border-left: 4px solid #f59e0b;
+            }
+            .controls {
+                background: #f8fafc;
+                padding: 20px;
+                border-radius: 10px;
+                margin-bottom: 20px;
+            }
+            .controls label {
+                font-weight: 600;
+                color: #334155;
+                margin-right: 10px;
+            }
+            #tickerSelect {
+                padding: 8px 16px;
+                border: 2px solid #e2e8f0;
+                border-radius: 8px;
+                font-size: 14px;
+                font-weight: 500;
+                color: #1e293b;
+                transition: all 0.3s;
+            }
+            #tickerSelect:focus {
+                outline: none;
+                border-color: #667eea;
+                box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            }
+            .messages-container {
+                flex: 1;
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
+            }
+            #messages {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                overflow-y: auto;
+                flex: 1;
+            }
+            #messages li {
+                padding: 12px 16px;
+                margin-bottom: 8px;
+                background: white;
+                border-radius: 8px;
+                border-left: 4px solid #667eea;
+                font-size: 14px;
+                line-height: 1.6;
+                animation: slideIn 0.3s ease;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            }
+            @keyframes slideIn {
+                from {
+                    opacity: 0;
+                    transform: translateY(-10px);
+                }
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+            #messages li:nth-child(even) {
+                border-left-color: #764ba2;
+            }
+            .message-time {
+                color: #64748b;
+                font-size: 12px;
+                font-weight: 600;
+            }
+            .message-content {
+                color: #1e293b;
+                margin-left: 10px;
+            }
+            .info-text {
+                background: #eff6ff;
+                border: 1px solid #bfdbfe;
+                border-radius: 8px;
+                padding: 12px;
+                margin-top: 5px;
+                margin-bottom: 10px;
+                font-size: 13px;
+                color: #1e40af;
+            }
+            .info-text code {
+                background: #dbeafe;
+                padding: 2px 6px;
+                border-radius: 4px;
+                font-family: 'Courier New', monospace;
+                color: #1e3a8a;
+            }
+            ::-webkit-scrollbar {
+                width: 8px;
+            }
+            ::-webkit-scrollbar-track {
+                background: #f1f5f9;
+                border-radius: 4px;
+            }
+            ::-webkit-scrollbar-thumb {
+                background: #cbd5e1;
+                border-radius: 4px;
+            }
+            ::-webkit-scrollbar-thumb:hover {
+                background: #94a3b8;
+            }
         </style>
-        <script type="text/javascript" src="http://localhost:2000/centrifuge.js"></script>
+        <script type="text/javascript">
+            // Check if protobuf mode is enabled via URL parameter.
+            const urlParams = new URLSearchParams(window.location.search);
+            const useProtobuf = urlParams.get('protobuf') === 'true';
+
+            if (useProtobuf) {
+                // Load text-encoding polyfills for protobuf mode
+                document.write('<script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"><\/script>');
+                document.write('<script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"><\/script>');
+                document.write('<script type="text/javascript" src="https://unpkg.com/centrifuge@^5.5/dist/centrifuge.protobuf.js"><\/script>');
+            } else {
+                document.write('<script type="text/javascript" src="https://unpkg.com/centrifuge@^5.5/dist/centrifuge.js"><\/script>');
+            }
+        </script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -27,16 +217,22 @@
 
                 centrifuge.on('connecting', function(ctx){
                     drawText('Connecting: ' + ctx.reason);
+                    statusDiv.className = 'status-connecting';
+                    statusDiv.textContent = '⏳ Connecting...';
                 });
 
                 centrifuge.on('disconnected', function(ctx){
                     drawText('Disconnected: ' + ctx.reason);
+                    statusDiv.className = 'status-disconnected';
+                    statusDiv.textContent = '❌ Disconnected';
                 });
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connected', function(ctx){
-                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
-                    statusDiv.textContent = 'Connected - ready to subscribe';
+                    const mode = useProtobuf ? 'protobuf' : 'JSON';
+                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' (using ' + mode + ' protocol)');
+                    statusDiv.className = 'status-connected';
+                    statusDiv.textContent = '✓ Connected - ready to subscribe';
 
                     // Initial subscription with default ticker.
                     subscribeToTicker(tickerSelect.value);
@@ -47,7 +243,6 @@
                     statusDiv.textContent = 'Subscribing to ticker: ' + ticker;
 
                     const tagsFilter = {
-                        op: "", // leaf node for comparison
                         key: "ticker",
                         cmp: "eq",
                         val: ticker
@@ -89,7 +284,8 @@
 
                 function handleSubscribed(ctx) {
                     drawText('Subscribed on channel ' + ctx.channel);
-                    statusDiv.textContent = 'Subscribed to ticker: ' + tickerSelect.value + ' (tags filtering active)';
+                    statusDiv.className = 'status-connected';
+                    statusDiv.textContent = '✓ Subscribed to ticker: ' + tickerSelect.value + ' (tags filtering active)';
                     if (ctx.wasRecovering) {
                         if (ctx.recovered) {
                             drawText('Subscription to ' + ctx.channel + ' recovered');
@@ -104,38 +300,83 @@
                 }
 
                 function handlePublication(ctx) {
-                    const ticker = ctx.data["ticker"];
-                    const bid = ctx.data["bid"];
-                    const ask = ctx.data["ask"];
+                    let data = ctx.data;
+
+                    // In protobuf mode, decode binary data
+                    if (useProtobuf) {
+                        const str = new TextDecoder("utf-8").decode(ctx.data);
+                        data = JSON.parse(str);
+                    }
+
+                    const ticker = data["ticker"];
+                    const bid = data["bid"];
+                    const ask = data["ask"];
                     const text  = "Ticker " + ticker + " bid: " + bid + " ask: " + ask;
                     drawText(text);
                 }
 
                 function drawText(text) {
                     let e = document.createElement('li');
-                    e.innerHTML = [(new Date()).toString(), ' ' + text].join(':');
+                    const time = new Date().toLocaleTimeString();
+                    e.innerHTML = '<span class="message-time">' + time + '</span><span class="message-content">' + text + '</span>';
                     container.insertBefore(e, container.firstChild);
                 }
             });
         </script>
     </head>
     <body>
-        <div class="controls">
-            <label for="tickerSelect">Select Ticker:</label>
-            <select id="tickerSelect">
-                <option value="AAPL" selected>AAPL</option>
-                <option value="GOOG">GOOG</option>
-                <option value="MSFT">MSFT</option>
-                <option value="AMZN">AMZN</option>
-                <option value="TSLA">TSLA</option>
-                <option value="META">META</option>
-                <option value="NVDA">NVDA</option>
-                <option value="NFLX">NFLX</option>
-                <option value="ORCL">ORCL</option>
-                <option value="CRM">CRM</option>
-            </select>
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    <h1>
+                        Stock Ticker Feed - Tags Filter
+                        <script>
+                            document.write('<span class="protocol-badge protocol-' + (useProtobuf ? 'protobuf">Protobuf' : 'json">JSON') + '</span>');
+                        </script>
+                    </h1>
+                </div>
+                <div class="card-body">
+                    <div id="status" class="status-disconnected">Not connected</div>
+
+                    <div class="controls">
+                        <label for="tickerSelect">
+                            <svg width="16" height="16" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16" style="vertical-align: text-bottom; margin-right: 4px;">
+                                <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z"/>
+                            </svg>
+                            Select Stock Ticker:
+                        </label>
+                        <select id="tickerSelect" class="form-select-sm">
+                            <option value="AAPL" selected>🍎 AAPL - Apple Inc.</option>
+                            <option value="GOOG">🔍 GOOG - Alphabet Inc.</option>
+                            <option value="MSFT">💻 MSFT - Microsoft Corp.</option>
+                            <option value="AMZN">📦 AMZN - Amazon.com Inc.</option>
+                            <option value="TSLA">⚡ TSLA - Tesla Inc.</option>
+                            <option value="META">👥 META - Meta Platforms</option>
+                            <option value="NVDA">🎮 NVDA - NVIDIA Corp.</option>
+                            <option value="NFLX">🎬 NFLX - Netflix Inc.</option>
+                            <option value="ORCL">🗄️ ORCL - Oracle Corp.</option>
+                            <option value="CRM">☁️ CRM - Salesforce Inc.</option>
+                        </select>
+                    </div>
+
+                    <div class="info-text">
+                        <script>
+                            if (!useProtobuf) {
+                                document.write('<strong>ℹ️ Tip:</strong> Add <code><a href="?protobuf=true">?protobuf=true</a></code> to the URL to use Protobuf protocol instead of JSON.');
+                            } else {
+                                document.write('<strong>✓ Protobuf Mode:</strong> Using binary protocol with TextEncoder/TextDecoder.');
+                            }
+                        </script>
+                    </div>
+
+                    <div class="messages-container">
+                        <h5 style="color: #334155; margin-bottom: 12px; font-size: 16px; font-weight: 600;">
+                            📊 Live Updates
+                        </h5>
+                        <ul id="messages"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="status">Not connected</div>
-        <ul id="messages"></ul>
     </body>
 </html>
