--- a/_examples/experimental/http2_haproxy/index.html
+++ b/_examples/experimental/http2_haproxy/index.html
@@ -47,7 +47,7 @@
                 const transports = [
                     {
                         transport: 'websocket',
-                        endpoint: `wss://${window.location.host}/connection/websocket`
+                        endpoint: `wss://localhost/connection/websocket`
                     }
                 ];
                 const centrifuge = new Centrifuge(transports, {});
