--- a/_examples/experimental/http2/index.html
+++ b/_examples/experimental/http2/index.html
@@ -30,15 +30,15 @@
                 const centrifuge = new Centrifuge(transports, {
                     // This is required to reliably use HTTP/2 Extended CONNECT in Chrome upon reconnections
                     // (when no HTTP/2 connection in pool exists Chrome selects HTTP/1.1 for WebSocket).
-                    // getData: function () {
-                    //     // Fetch /ping endpoint.
-                    //     return fetch('/ping', {
-                    //         method: 'GET',
-                    //         credentials: 'include'
-                    //     }).then(function(response) {
-                    //         return null;
-                    //     });
-                    // }
+                    getData: function () {
+                        // Fetch /ping endpoint.
+                        return fetch('/ping', {
+                            method: 'GET',
+                            credentials: 'include'
+                        }).then(function(response) {
+                            return null;
+                        });
+                    }
                 });
 
                 centrifuge.on('connected', function(ctx){
