--- a/_examples/experimental/http2/index.html
+++ b/_examples/experimental/http2/index.html
@@ -32,7 +32,7 @@
                 ];
 
                 const centrifuge = new Centrifuge(transports, {
-                    // This is required to reliably use HTTP/2 Extended CONNECT in Chrome upon reconnections
+                    // Workaround to reliably use HTTP/2 Extended CONNECT in Chrome upon reconnections
                     // (when no HTTP/2 connection in pool exists Chrome selects HTTP/1.1 for WebSocket).
                     getData: function () {
                         // Fetch /ping endpoint.
